sign in working. rake tasks to create admin/users cmd line. Need to get page flow worked out now.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,13 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",    '#' %></li>
           <li><%= link_to "Help",    '#' %></li>
-          <li><%= link_to "Sign in", '/signin' %></li>
+          <% if signed_in? %>
+            <li>
+              <%= link_to "Sign out", signout_path, method: "delete" %>
+            </li>
+          <% else %>
+            <li><%= link_to "Sign in", '/signin' %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
