--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="span6 offset3">
 
     <%= form_for :user, url: "/profile/update", method: "POST" do |f|%>
-      <%=render 'shared/error_messages'%>
+      <%=render 'shared/error_messages', obj: @user %>
 
       <%= f.label :email %>
       <%= f.text_field :email %>
