--- a/app/views/volunteers/edit.html.erb
+++ b/app/views/volunteers/edit.html.erb
@@ -13,7 +13,7 @@
       <%= v.label :email %>
       <%= v.text_field :email%>
       <br/>
-      <%= v.submit "Add Volunteer", class: "btn btn-large btn-primary" %>
+      <%= v.submit "Save changes", class: "btn btn-large btn-primary" %>
     </div>
   </fieldset>
   <%end%>
