--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -6,7 +6,7 @@
         <%= will_paginate %>
         <table class="volunteer_table">
           <tr>
-            <th>Name</th><th>Email</th><th></th><th></th>
+            <th>Name</th><th>Email</th><th></th><th></th><th></th>
           </tr>
           <%= render @volunteers %>
         </table>
