--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -25,7 +25,7 @@
           <tr>
             <th>Name</th><th>Email</th><th>Rotation</th><th></th><th></th>
           </tr>
-          <%= render @groups %>
+          <%= render @groups, mode: 'edit' %>
         </table>
         <%= will_paginate %>
       </div>
