--- a/app/views/volunteers/_volunteer.html.erb
+++ b/app/views/volunteers/_volunteer.html.erb
@@ -1,6 +1,7 @@
 <tr class="<%= cycle("odd", "even") %>">
   <td><%= volunteer.full_name %></td>
   <td><%= volunteer.email %></td>
-  <td><%= link_to "edit", edit_volunteer_path(volunteer.id) %>
+  <td><%= link_to "edit", edit_volunteer_path(volunteer) %></td>
+  <td><%= link_to "groups", groups_volunteer_path(volunteer) %></td>
   <td><%= link_to 'remove', volunteer, :confirm => 'Are you sure you want to destroy your account?', :method => :delete %> 
 </tr>
