got group volunteers pages working

--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -4,6 +4,7 @@
   <% if mode == 'edit' %>
     <td><%= group.rotation? %></td>  
     <td><%= link_to "edit", edit_group_path(group) %>
+    <td><%= link_to "volunteers", volunteers_group_path(group) %></td>
     <td><%= link_to 'remove', group, :confirm => 'Are you sure you want to destroy your account?', :method => :delete %> 
   <% end %>
   <% if mode == 'volunteer' %>
