schedule edits working

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -13,7 +13,7 @@
       <div class="controls">        
         <%= g.label :rotation do%>
           <%= g.check_box :rotation %>        
-          <%= "has a rotation" %>
+          <%= "has a rotation?" %>
         <% end %>
       </div>
 
