--- a/config/initializers/rotation_email_setup.rb.tmpl
+++ b/config/initializers/rotation_email_setup.rb.tmpl
@@ -1,3 +1,8 @@
+EMAIL_TEST_ADDRESS = 'kevin@e-kevin.com'
+EMAIL_FROM = 'Franklin Street Church <mailing.list.admin@franklinstreetchurch.org>'
+EMAIL_ADMINS = Rails.env == 'production' ?  'Kevin Lester <kevin@e-kevin.com>, Ben Boyett<benjamin.boyett@gmail.com>' : 'Kevin Lester <kevin@e-kevin.com>'
+EMAIL_TEST_ON = Rails.env == 'production' ? false : true
+
 Rotation::Application.configure do
   config.action_mailer.delivery_method = :smtp
   config.action_mailer.smtp_settings = {
