added group export. added titles to screens.

--- a/app/views/groups/volunteers.html.erb
+++ b/app/views/groups/volunteers.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Group Volunteers") %>
 <h1><%= @group.name %> &lt;<%= @group.email %>&gt;</h1>
 <div class="pull-left" style="width:45%;padding:5px;">
 <h3>Current Volunteers</h3>
