--- a/app/views/schedules/list.html.erb
+++ b/app/views/schedules/list.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Schedules") %>
 <div class="pull-left">
   <%= link_to "<< previous Sunday", list_schedule_path(@prev_year, @prev_month, @prev_day) %> 
 </div>
