--- a/app/views/volunteers/edit.html.erb
+++ b/app/views/volunteers/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Edit Volunteer") %>
 <div>
   <%= form_for(@volunteer) do |v| %>
   <%=render 'shared/error_messages', obj: @volunteer%>
