--- a/app/views/volunteers/groups.html.erb
+++ b/app/views/volunteers/groups.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Volunteer Groups") %>
 <h1><%= @volunteer.full_name %> &lt;<%= @volunteer.email %>&gt;</h1>
 <div class="pull-left" style="width:45%;padding:5px;">
 <h3>Current Groups</h3>
