--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Groups") %>
 <div>
   <div>
     <fieldset>
@@ -6,7 +7,7 @@
         <%= will_paginate %>
         <table class="group_table">
           <tr>
-            <th>Name</th><th>Email</th><th>Rotation</th><th></th><th></th><th></th>
+            <th>Name</th><th>Email</th><th>Rotation</th><th></th><th></th><th></th><th></th>
           </tr>
           <%= render @groups, mode: 'edit' %>
         </table>
