added test_email feature to groups

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -7,7 +7,7 @@
         <%= will_paginate %>
         <table class="group_table">
           <tr>
-            <th>Name</th><th>Email</th><th>Rotation</th><th></th><th></th><th></th><th></th>
+            <th>Name</th><th>Email</th><th>Rotation</th><th></th><th></th><th></th><th></th><th></th>
           </tr>
           <%= render @groups, mode: 'edit' %>
         </table>
