--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -31,6 +31,8 @@
       </ul>
       <li>Add volunteers to group.</li>
       <li>Export group volunteers list. <i>(should only be needed by admins)</i></li>
+      <li>Test email link to send the email for the next Sunday to the user's 
+          address for review.</li>
     </ul>
     <li><%= link_to 'Schedule', index_schedule_path %></li>
     <ul>
