--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -6,6 +6,7 @@
     <td><%= link_to "edit", edit_group_path(group) %>
     <td><%= link_to "volunteers", volunteers_group_path(group) %></td>
     <td><%= link_to "export", export_group_path(group) %></td>
+    <td><%= link_to "test_email", test_email_group_path(group) if group.rotation?%></td>
     <td><%= link_to 'remove', group, :confirm => 'Are you sure you want to destroy your account?', :method => :delete %> 
   <% end %>
   <% if mode == 'volunteer' %>
