pagination and search working via ajax on volunteers page

--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -1,24 +1,6 @@
 <% provide(:title, "Volunteers") %>
 <div>
   <div>
-    <fieldset>
-      <legend>Volunteers</legend>
-      <%= form_tag volunteers_path, :method => 'get', :id => "volunteers_search" do %>
-        <%= text_field_tag :search, params[:search] %><br>
-      <% end %>
-      <%= will_paginate %>
-      <table class="volunteer_table">
-        <tr><td>
-        <tr>
-          <th>Name</th><th>Email</th><th></th><th></th><th></th>
-        </tr>
-        <%= render @volunteers %>
-      </table>
-      <%= will_paginate %>
-    </fieldset>
-  </div>
-  <br/>
-  <div>
     <%= form_for(@volunteer) do |v| %>
     <%=render 'shared/error_messages', obj: @volunteer%>
     <fieldset>
@@ -36,5 +18,15 @@
       </div>
     </fieldset>
     <% end %>
+  </div>
+  <br/>
+  <div>
+    <fieldset>
+      <legend>Volunteers</legend>
+      <%= form_tag volunteers_path, :method => 'get', :id => "volunteers_search" do %>
+        <%= text_field_tag :search, params[:search] %><br>
+      <% end %>
+      <div id="volunteers"><%= render 'volunteers' %></div>
+    </fieldset>
   </div>
 </div>
