--- a/app/views/volunteers/_volunteers.html.erb
+++ b/app/views/volunteers/_volunteers.html.erb
@@ -1,3 +1,13 @@
+<%= will_paginate %>
+<table class="volunteer_table" width="100%">
+<tr><td>
+<tr>
+  <th>Name</th><th>Email</th><th></th><th></th><th></th>
+</tr>
+<% if @volunteers.empty? %>
+  <tr><td colspan="5">No Volunteers</td></tr>
+<% end %>
+<% @volunteers.each do |volunteer| %>
 <tr class="<%= cycle("odd", "even") %>">
   <td><%= volunteer.full_name %></td>
   <td><%= volunteer.email %></td>
@@ -5,3 +15,6 @@
   <td><%= link_to "groups", groups_volunteer_path(volunteer) %></td>
   <td><%= link_to 'remove', volunteer, :confirm => 'Are you sure you want to destroy your account?', :method => :delete %> 
 </tr>
+<% end %>
+</table>
+<%= will_paginate %>
