vol search/pagination on groups using ajax

--- a/app/views/groups/volunteers.html.erb
+++ b/app/views/groups/volunteers.html.erb
@@ -1,43 +1,19 @@
 <% provide(:title, "Group Volunteers") %>
 <h1><%= @group.name %> &lt;<%= @group.email %>&gt;</h1>
-<div id="active_volunteers" class="pull-left" style="width:45%;padding:5px;">
-<h3>Current Volunteers</h3>
-  <%= form_tag volunteers_group_path(@group), :method => 'get', :id => "volunteers_search" do %>
+<div class="pull-left" style="width:45%;padding:5px;">
+  <h3>Current Volunteers</h3>
+  <%= form_tag volunteers_group_path(@group), :method => 'get', :id => "active_volunteers_search" do %>
     <%= text_field_tag :active_search, params[:active_search] %>
-    <%= hidden_field_tag :avail_search, params[:avail_search] %>
+    <%= hidden_field_tag :avail_search, params[:avail_search], id: "active_avail_search" %>
   <% end %>
-  <table class="group_table">
-    <tr>
-      <th>Name</th><th>Email</th><th></th>
-    </tr>
-    <% @volunteers.each do |v| %>
-      <tr class="<%= cycle("odd", "even") %>">
-        <td><%= v.full_name %></td>
-        <td><%= v.email %></td>
-        <td><%= link_to 'remove', remove_volunteer_group_path(@group.id, v.id) %></td> 
-      </tr>
-    <% end %>
-  </table>
-  <%= will_paginate @volunteers, param_name: 'active_page'%>
+  <div id="active_volunteers"><%= render 'active_volunteers' %></div>
 </div>
 <div class="pull-right" style="width:45%">
   <h3>Available Volunteers</h3>
-  <%= form_tag volunteers_group_path(@group), :method => 'get', :id => "volunteers_search" do %>
+  <%= form_tag volunteers_group_path(@group), :method => 'get', :id => "avail_volunteers_search" do %>
     <%= text_field_tag :avail_search, params[:avail_search] %><br>
-    <%= hidden_field_tag :active_search, params[:active_search] %>
+    <%= hidden_field_tag :active_search, params[:active_search], id: "avail_active_search" %>
   <% end %>
-  <table class="group_table">
-    <tr>
-      <th>Name</th><th>Email</th><th></th>
-    </tr>
-    <% @unjoined.each do |v| %>
-      <tr class="<%= cycle("odd", "even") %>">
-        <td><%= v.full_name %></td>
-        <td><%= v.email %></td>
-        <td><%= link_to 'add', add_volunteer_group_path(@group.id, v.id) %></td> 
-      </tr>
-    <% end %>
-  </table>
-  <%= will_paginate @unjoined, param_name: 'avail_page'%>
+  <div id="avail_volunteers"><%= render 'avail_volunteers' %></div>
 </div>
 <div style="clear:both"></div>
