--- a/app/views/change_log/index.html.erb
+++ b/app/views/change_log/index.html.erb
@@ -12,7 +12,7 @@
 <% @groups.each do |g| %>
   <% vols = g.volunteers_changed_since(@last_sync.utc) %>
   <% if !vols.empty? %>
-    <h3><%= g.name %></h3>
+    <h3><%= g.name + " <#{g.email}>" %></h3>
     <ul>
     <% vols.each do |v| %>
       <li>
