removed names from export. google does not like them

--- a/app/views/groups/_volunteer_export.html.erb
+++ b/app/views/groups/_volunteer_export.html.erb
@@ -5,5 +5,5 @@
 <% if (i) % 20 == 0 %>
 -------------------------
 <%end%>
-<%= v.full_name %> &lt;<%= v.email %>&gt;<% unless i == vols.size-1 or (i+1) % 20 == 0%>,<% end %>
+<%= v.email %><% unless i == vols.size-1 or (i+1) % 20 == 0%>,<% end %>
 <% end %>
