--- a/app/views/groups/_active_volunteers.html.erb
+++ b/app/views/groups/_active_volunteers.html.erb
@@ -6,7 +6,7 @@ $(function() {
   });
 })
 </script>
-<table class="group_table">
+<table id="volunteers_table" class="volunteer_table">
   <tr>
     <th>Name</th><th>Email</th><th></th>
   </tr>
