--- a/app/views/groups/_avail_volunteers.html.erb
+++ b/app/views/groups/_avail_volunteers.html.erb
@@ -10,6 +10,9 @@ $(function() {
   <tr>
     <th>Name</th><th>Email</th><th></th>
   </tr>
+  <% if @unjoined.empty? %>
+    <tr><td colspan="3">No volunteers</td></tr>
+  <% end %>
   <% @unjoined.each do |v| %>
     <tr class="<%= cycle("odd", "even") %>">
       <td><%= v.full_name %></td>
