added search button

--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -4,8 +4,13 @@
     <fieldset>
       <legend>Volunteers</legend>
       <%= form_tag volunteers_path, :method => 'get', :id => "volunteers_search" do %>
-        <%= text_field_tag :search, params[:search] %><br>
+        <div class="form-horizontal">
+          <%= text_field_tag :search, params[:search] %>
+          &nbsp;&nbsp;
+          <%= submit_tag "Search", class: "btn btn-medium btn-primary" %>
+        </div>
       <% end %>
+      <br>
       <div id="volunteers"><%= render 'volunteers' %></div>
     </fieldset>
   </div>
