--- a/config/initializers/rotation_email_setup.rb.tmpl
+++ b/config/initializers/rotation_email_setup.rb.tmpl
@@ -19,8 +19,8 @@ Rotation::Application.configure do
   config.action_mailer.smtp_settings = {
     :address              => 'smtp.gmail.com',
     :port                 => 587,
-    :user_name            => [username], 
-    :password             => [password], 
+    :user_name            => '[username]', 
+    :password             => '[password]', 
     :authentication       => 'plain',
     :enable_starttls_auto => true  
   }
