--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,15 +4,19 @@
       <%= link_to "FSC Groups", '/', id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home",    '/' %></li>          
+          <li><%= link_to "Home",    '/' %></li>
           <% if signed_in? %>
-            <li><%= link_to "Profile", "/profile" %>
-            <li><%= link_to "Volunteers", "/volunteers" %>
-            <li><%= link_to "Groups", "/groups" %>
-            <li><%= link_to "Schedule", "/schedule" %>
-            <li><%= link_to "Changes", "/change_log" %>
-            <li><%= link_to "Sign out | (#{@current_user.user_name})", signout_path, method: "delete" %>
+            <li><%= link_to "Profile", "/profile" %></li>
+            <li class="dropdown"><%= link_to "Setup <b class='caret'></b>".html_safe, "#", class: 'dropdown-toggle', 'data-toggle' => 'dropdown' %>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Volunteers", "/volunteers" %></li>
+                <li><%= link_to "Groups", "/groups" %></li>
+                <li><%= link_to "Schedule", "/schedule" %></li>
+              </ul>
             </li>
+            <li><%= link_to "Changes", "/change_log" %></li>
+
+            <li><%= link_to "Sign out | (#{@current_user.user_name})", signout_path, method: "delete" %></li>
           <% else %>
             <li><%= link_to "Sign in", '/signin' %></li>
           <% end %>
